--- a/clubshen.html
+++ b/clubshen.html
@@ -46,7 +46,7 @@
 <hr>
         <h2>Streaming</h2>
         <p>We also streamed these events via Twitch</p>
-        <img src="eventpics/smash4stream.png" alt="">
+        <img class="poster" src="eventpics/smash4stream.png" alt="">
         <h3><a href="https://www.twitch.tv/clubshenhawaii/videos">TWITCH CHANNEL</a></h3>
 
 
