--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="profile">
         <img src="images/RawIMG.png" alt="Raw Profile Pic">
         <h2>Hello.</h2>
-        <p>My name is Rawlinson Sausal, you can call me Raw. Welcome to my small little portfolio</p>
+        <p>My name is Rawlinson Sausal, you can call me Raw. Welcome to my small little portfolio. Just like my nickname, I am still very "raw" and still trying to improve my craft, so I am always open to criticisms in order to improve further.</p>
       </div>
       <hr>
       <div class="skills">
